--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
     <!-- 短信 -->
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.WRITE_SMS" />
-    
-    <!--sd卡操作-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <!-- sd卡操作 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!-- 网络 -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -45,8 +48,17 @@
             android:label="广播接收者测试" />
 
         <receiver android:name=".receiverdemo.TestReceiver">
-            <intent-filter>
+            <intent-filter android:priority="1">
                 <action android:name="com.qwm.test" />
+                <action android:name="com.qwm.testxm" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".receiverdemo.MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter android:priority="999">
+                <action android:name="com.qwm.testxm" />
             </intent-filter>
         </receiver>
         <receiver android:name=".receiverdemo.PhoneReceiver">
@@ -74,6 +86,37 @@
         <service android:name=".servicedemo.AIDLService">
             <intent-filter>
                 <action android:name="com.qwm.aidl" />
+            </intent-filter>
+        </service>
+        <!-- ===============================Activity和Service 测试-================================================================ -->
+        <activity android:name=".activityservicedemo.ActivityServiceActivity" />
+
+        <service
+            android:name=".activityservicedemo.MyTestService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".activityservicedemo.MyShareService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".activityservicedemo.MyMessengerService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".activityservicedemo.MyInterfaceService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.qwm.servictestinterface" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".activityservicedemo.MyAIDLService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.qwm.servictestaidl" />
             </intent-filter>
         </service>
 
@@ -106,7 +149,18 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="ScreenActivity" />
         <activity android:name=".viewdemo.CirclePhotoActivity" />
-        <activity android:name=".viewdemo.ViewActivity"></activity>
+        <activity android:name=".viewdemo.ViewActivity" />
+        <activity android:name=".listviewdemo.ListGridActivity" />
+        <activity android:name=".listviewdemo.GridViewActivity" />
+        <activity android:name=".filestoragedemo.FileStorageActivity" />
+
+        <provider
+            android:name=".filestoragedemo.MySqliteContentProvider"
+            android:authorities="com.qwm.storage"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".xmljsondemo.XmlJsonActivity"></activity>
     </application>
 
 </manifest>
