--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,10 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
     compile files('libs/gson-2.3.1.jar')
     compile files('libs/fastjson-1.2.5.jar')
+    compile files('libs/volley.jar')
+    compile files('libs/pinyin4j-2.5.0.jar')
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:support-v4:23.2.1'
 }
