--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,12 @@ android {
 
     defaultConfig {
         applicationId "com.qwm.androidreview01"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -28,4 +29,8 @@ dependencies {
     compile files('libs/pinyin4j-2.5.0.jar')
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:design:24.0.0-alpha2'
 }
