--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,12 @@
     <!-- 网络 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- 蓝牙 -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -166,7 +171,11 @@
         <activity android:name=".vollydemo.VolleyActivity" />
         <activity android:name=".fragmentdemo.FragmentDemoActivity" />
         <activity android:name=".listazdemo.ListViewAZDemoctivity" />
-        <activity android:name=".viewpagerdemo.ViewpagerActivity"></activity>
+        <activity android:name=".viewpagerdemo.ViewpagerActivity" />
+        <activity android:name=".picassodemo.PicassoDemoActivity" />
+        <activity android:name=".bluetoothdemo.BluetoothDemoActivity" />
+        <activity android:name=".recyclerviewdemo.RecyclerViewDemoActivity" />
+        <activity android:name=".DesignDemo.DesignSuportDemoActivity"></activity>
     </application>
 
 </manifest>
