--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
+    <!--联系人-->
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+
     <!-- 短信 -->
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.WRITE_SMS" />
@@ -138,10 +142,17 @@
         <provider
             android:name=".providerdemo.PersonProvider"
             android:authorities="com.qwm.person" />
+        <provider
+            android:name=".providerdemo.myself.PersonProvider2"
+            android:authorities="com.qwm.androidreview.providerdemo.myself.PersonProvider2" />
 
         <activity
             android:name=".providerdemo.ProviderActivity"
             android:label="内容提供者测试" />
+
+        <activity android:name=".providerdemo.ProviderDemoActivity" />
+        <activity android:name=".providerdemo.system.ProvideSystemActivity" />
+        <activity android:name=".providerdemo.myself.ProviderMySelfActivity"></activity>
 
         <!-- ===============================Service 测试-================================================================ -->
         <activity
@@ -254,7 +265,7 @@
         <activity android:name=".datastoragedemo.networkstorage.NetWorkStorageActivity" />
         <activity android:name=".datastoragedemo.internalstorage.InternalStorageActivity" />
         <activity android:name=".datastoragedemo.externalstorage.ExternalStorageActivity" />
-        <activity android:name=".datastoragedemo.contentprovider.CententProviderStorageActivity"></activity>
+        <activity android:name=".datastoragedemo.contentprovider.CententProviderStorageActivity" />
     </application>
 
 </manifest>
