--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:multidex:'
+    compile 'com.zzhoujay.markdown:markdown:1.0.5'
     compile files('libs/zixing-core-3.2.0.jar')
 }
