--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile files('libs/volley.jar')
     compile files('libs/pinyin4j-2.5.0.jar')
     compile project(':easeui')
+    compile 'com.android.support:multidex:'
+    compile files('libs/zixing-core-3.2.0.jar')
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
@@ -37,7 +39,10 @@ dependencies {
     compile 'com.parse:parse-android:1.13.1'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:multidex:'
     compile 'com.zzhoujay.markdown:markdown:1.0.5'
-    compile files('libs/zixing-core-3.2.0.jar')
+    compile 'jp.wasabeef:glide-transformations:3.0.1'
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    // okttp
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okio:okio:1.7.0'
 }
